--- a/resources/views/user/show.html
+++ b/resources/views/user/show.html
@@ -24,20 +24,13 @@
 
           {{ if .currentUserData }}
 
-            <a class="text-center mt-2 mb-4" id="logout" href="#">
-              <form action='{{ Route "logout" }}' method="POST">
-                {{ .csrfField }}
-                <button class="btn btn-sm btn-danger" type="submit" name="button">退出</button>
-              </form>
-            </a>
-
             {{ if ne .currentUserData.ID .userData.ID }}
               <div class="text-center mt-2 mb-4">
                 {{ if .isFollowing }}
-                  <form action='{{ Route "followers.destroy" .userData.ID }}' method="post">
-                    {{ .csrfField }}
-                    <button type="submit" class="btn btn-sm btn-outline-primary">取消关注</button>
-                  </form>
+<!--                  <form action='{{ Route "followers.destroy" .userData.ID }}' method="post">-->
+<!--                    {{ .csrfField }}-->
+<!--                    <button type="submit" class="btn btn-sm btn-outline-primary">取消关注</button>-->
+<!--                  </form>-->
                 {{ else }}
                   <form action='{{ Route "followers.store" .userData.ID }}' method="post">
                     {{ .csrfField }}
@@ -45,6 +38,13 @@
                   </form>
                 {{ end }}
               </div>
+            {{ else }}
+              <a class="text-center mt-2 mb-4" id="logout" href="#">
+                <form action='{{ Route "logout" }}' method="POST" onsubmit="return confirm('确定要退出吗？');">
+                  {{ .csrfField }}
+                  <button class="btn btn-sm btn-danger" type="submit" name="button">退出</button>
+                </form>
+              </a>
             {{ end }}
           {{ end }}
 
@@ -66,7 +66,7 @@
                       {{ .Content }}
                     </div>
                     {{ if eq .UserID $.currentUserData.ID }}
-                      <form action='{{ Route "statuses.destroy" .ID }}' method="POST" onsubmit="return confirm('您确定要删除本条内容吗？');">
+                      <form action='{{ Route "statuses.destroy" .ID }}' method="POST" onsubmit="return confirm('确定要删除本条内容吗？');">
                         {{ $.csrfField }}
                         <input hidden name="back" value='{{ RelativeRoute "users.show" $.userData.ID }}'>
                         <button type="submit" class="btn btn-sm btn-danger">删除</button>
